path problem for latex fixed
git-svn-id: https://overture.svn.sourceforge.net/svnroot/overture/trunk@2142 2b2d4d09-c93c-414a-ad04-6e973f5c1cff